--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "ibuildingsnl/rabbitmq-workshop-code",
   "type": "project",
   "require": {
-    "php-amqplib/php-amqplib": "^2.6"
+    "php-amqplib/php-amqplib": "^2.6",
+    "webmozart/console": "^1.0@beta"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
@@ -16,7 +17,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "\\": "src/"
+      "": "src/"
     }
   },
   "autoload-dev": {
