--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
   "type": "project",
   "require": {
     "php-amqplib/php-amqplib": "^2.6",
-    "webmozart/console": "^1.0@beta"
+    "webmozart/console": "^1.0@beta",
+    "ramsey/uuid": "^3.5"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
@@ -18,7 +19,11 @@
   "autoload": {
     "psr-4": {
       "": "src/"
-    }
+    },
+    "files": [
+      "src/Shared/CommandLine/functions.php",
+      "src/Shared/Resilience/functions.php"
+    ]
   },
   "autoload-dev": {
     "psr-4": {
