--- a/docker/orders_and_registrations/Dockerfile
+++ b/docker/orders_and_registrations/Dockerfile
@@ -1,3 +1,3 @@
-FROM rabbitmq_workshop_base
+FROM ibuildingsnl/rabbitmq_workshop_base
 WORKDIR /code
 ENTRYPOINT ["php", "/code/src/OrdersAndRegistrations/consume.php"]
