--- a/docker/devtools/Dockerfile
+++ b/docker/devtools/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.0-cli
+FROM ibuildingsnl/rabbitmq_workshop_base
 COPY docker/devtools/script/* /usr/local/bin/
 RUN chmod +x /usr/local/bin/*
 RUN install-composer
