--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,106 @@
 version: '2'
+
 services:
-    rabbitmq:
-        image: rabbitmq:3-management
-        ports:
-            - "15672:15672"
-        environment:
-          - RABBITMQ_DEFAULT_USER=user
-          - RABBITMQ_DEFAULT_PASS=password
-        restart: "always"
-    base:
-        build:
-            context: .
-            dockerfile: docker/base/Dockerfile
-        image: ibuildingsnl/rabbitmq_workshop_base
-        restart: "no"
     conference_web:
-        build:
-            context: .
-            dockerfile: docker/conference_web/Dockerfile
-        image: ibuildingsnl/rabbitmq_workshop_conference_web
+        image: matthiasnoback/php_workshop_tools_simple_webserver
+        command: src/ConferenceWeb/
         ports:
-            - "80:80"
+            - 8080:8080
         volumes:
-            - .:/code
-        links:
+            - .:/opt
+        depends_on:
             - conference_management
             - rabbitmq
+        tty: true
         environment:
             XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
             PHP_IDE_CONFIG: "serverName=conference_web"
             SERVICE_NAME: conference_web
         restart: "on-failure:5"
+
     conference_management:
-        build:
-            context: .
-            dockerfile: docker/conference_management/Dockerfile
-        image: ibuildingsnl/rabbitmq_workshop_conference_management
+        image: matthiasnoback/php_workshop_tools_simple_webserver
+        command: src/ConferenceManagement/
         volumes:
-            - .:/code
+            - .:/opt
+        tty: true
         environment:
             XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
             PHP_IDE_CONFIG: "serverName=conference_management"
             SERVICE_NAME: conference_management
         restart: "on-failure:5"
+
     orders_and_registrations:
-        build:
-            context: .
-            dockerfile: docker/orders_and_registrations/Dockerfile
-        image: ibuildingsnl/rabbitmq_workshop_orders_and_registrations
+        image: matthiasnoback/php_workshop_tools_base
+        command: php src/OrdersAndRegistrations/consume.php
         volumes:
-            - .:/code
-        links:
+            - .:/opt
+        depends_on:
             - rabbitmq
         environment:
             XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
-            PHP_IDE_CONFIG: "serverName=conference_management"
+            PHP_IDE_CONFIG: "serverName=orders_and_registrations"
             SERVICE_NAME: orders_and_registrations
         restart: "on-failure:5"
+
     orders_and_registrations_web:
-        build:
-            context: .
-            dockerfile: docker/orders_and_registrations_web/Dockerfile
-        image: ibuildingsnl/rabbitmq_workshop_orders_and_registrations_web
+        image: matthiasnoback/php_workshop_tools_simple_webserver
+        command: src/OrdersAndRegistrations/
         volumes:
-            - .:/code
-        links:
+            - .:/opt
+        depends_on:
             - rabbitmq
+        ports:
+            - 8081:8080
+        tty: true
         environment:
             XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
             PHP_IDE_CONFIG: "serverName=orders_and_registrations_web"
-            SERVICE_NAME: orders_and_registrations
+            SERVICE_NAME: orders_and_registrations_web
         restart: "on-failure:5"
+
+    external_payment_provider:
+        image: matthiasnoback/php_workshop_tools_simple_webserver
+        command: src/ExternalPaymentProvider/
+        volumes:
+            - .:/opt
+        ports:
+            - 8082:8080
+        tty: true
+        environment:
+            XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
+            PHP_IDE_CONFIG: "serverName=external_payment_provider"
+            SERVICE_NAME: external_payment_provider
+        restart: "on-failure:5"
+
+    redis:
+        image: redis:3.2
+        volumes:
+            - ./var/redis:/data
+        command: redis-server --appendonly yes
+
+    redis_browser:
+        image: inventid/redis-browser
+        ports:
+            - 8079:4567
+        volumes:
+            - ./docker/redis-browser/config:/opt/config
+
+    rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+            - 15672:15672
+        environment:
+          - RABBITMQ_DEFAULT_USER=user
+          - RABBITMQ_DEFAULT_PASS=password
+        restart: "on-failure:5"
+
     devtools:
-        image: ibuildingsnl/rabbitmq_workshop_devtools
-        build:
-            context: .
-            dockerfile: docker/devtools/Dockerfile
+        image: matthiasnoback/php_workshop_tools_base
         user: $HOST_UID:$HOST_GID
         environment:
             COMPOSER_HOME: "/home/.composer"
         volumes:
-            - $PWD:/code
-            - "$COMPOSER_HOME:/home/.composer"
+            - ${PWD}:/opt
+            - "${COMPOSER_HOME}:/home/.composer"
         restart: "no"
