--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,10 @@
   "name": "ibuildingsnl/rabbitmq-workshop-code",
   "type": "project",
   "require": {
-    "php-amqplib/php-amqplib": "^2.6",
-    "ramsey/uuid": "^3.5"
+    "ramsey/uuid": "^3.5",
+    "stripe/stripe-php": "^4.7",
+    "bunny/bunny": "^0.2.4",
+    "matthiasnoback/php-workshop-tools": "^0.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
