--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,13 @@
     "ramsey/uuid": "^3.5",
     "stripe/stripe-php": "^4.7",
     "bunny/bunny": "^0.2.4",
-    "matthiasnoback/php-workshop-tools": "^0.4"
+    "matthiasnoback/php-workshop-tools": "^0.5",
+    "guzzlehttp/guzzle": "^6.2",
+    "justinrainbow/json-schema": "^5.2",
+    "symfony/var-dumper": "^3.2",
+    "beberlei/assert": "^2.7",
+    "predis/predis": "^1.1",
+    "swiftmailer/swiftmailer": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
