Switch to full synchronous integration style for demo purposes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     conference_management:
         image: matthiasnoback/php_workshop_tools_simple_webserver
         command: src/ConferenceManagement/
+        ports:
+            - 8083:8080
         volumes:
             - .:/opt
         tty: true
