--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "beberlei/assert": "^2.7",
     "predis/predis": "^1.1",
     "swiftmailer/swiftmailer": "^5.4",
-    "pusher/pusher-php-server": "^2.6"
+    "pusher/pusher-php-server": "^2.6",
+    "react/event-loop": "^0.4.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.5"
