--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,22 @@ services:
             DB_PATH: /opt/var/db/conference_web
         restart: "on-failure:5"
 
+    conference_web_consumer:
+        image: matthiasnoback/php_workshop_tools_base
+        command: php src/ConferenceWeb/consume.php
+        volumes:
+            - .:/opt
+        depends_on:
+            - rabbitmq
+        tty: true
+        env_file: .env
+        environment:
+            XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
+            PHP_IDE_CONFIG: "serverName=conference_web_consumer"
+            DB_PATH: /opt/var/db/conference_web_consumer
+        restart: "on-failure:5"
+        stop_signal: SIGKILL
+
     conference_management:
         image: matthiasnoback/php_workshop_tools_simple_webserver
         command: src/ConferenceManagement/
