More enhancements from the workshop in Zeist

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
             PHP_IDE_CONFIG: "serverName=orders_and_registrations"
             DB_PATH: /opt/var/db/orders_and_registrations
         restart: "on-failure:5"
+        stop_signal: SIGKILL
 
     orders_and_registrations_web:
         image: matthiasnoback/php_workshop_tools_simple_webserver
