--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,21 @@ services:
         restart: "on-failure:5"
         stop_signal: SIGKILL
 
+    conference_web_consumer:
+        image: matthiasnoback/php_workshop_tools_base
+        command: php src/ConferenceWeb/consume.php
+        volumes:
+            - .:/opt
+        depends_on:
+            - rabbitmq
+        env_file: .env
+        environment:
+            XDEBUG_CONFIG: "remote_host=${DOCKER_HOST_IP}"
+            PHP_IDE_CONFIG: "serverName=conference_web_consumer"
+            DB_PATH: /opt/var/db/conference_web_consumer
+        restart: "on-failure:5"
+        stop_signal: SIGKILL
+
     orders_and_registrations_web:
         image: matthiasnoback/php_workshop_tools_simple_webserver
         command: src/OrdersAndRegistrations/
